# ExcelCoon-weaponizer

./: .gitignore  README.md  excelcoon.py  pyproject.toml
samples/: sample.xlsx  sample_http.xlsx  sample_smb.xlsx  sample_webdav.xlsx
tests/: test_excelcoon.py
