[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excelcoon"
version = "1.0.0"
description = "Excel File Canary Injector - Inject tracking and hash capture payloads into XLSX files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ExcelCoon Contributors" }
]
keywords = ["excel", "xlsx", "canary", "red-team", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
excelcoon = "excelcoon:main"

[tool.setuptools]
py-modules = ["excelcoon"]

[tool.setuptools.packages.find]
exclude = ["tests*", "samples*"]
